tests/good/syntax/076-do.clap
val x = do { 1 + 2 }

