tests/bad/syntax/023-unit.clap
val u : { U } = U { U }

